# lop-jax

./: .gitignore  README.md  compare_hessian_plots.py  evaluate_policies.py  evaluate_random_vecs.py  plot_learning_curves.py  plot_pi_surface.py  plot_random_vecs.py  pyproject.toml  requirements.txt  setup.py  slurm_run.sh  train_and_evaluate.py  train_dynamic_pi.py  train_pi_params.py  train_pi_params_nonstationary.py
analysis/: fig3.py  fig4.py  fig5.py  fig6_demo.py  fig6_interactive.py  fig7.py  plot_epsilon_rank.py  plot_hessian_variance.py  plot_task1400_hessian.py  plot_time.py
hessian_analysis/: experiment.md  plot_epsilon_rank.py  plot_hessian_variance.py
imagenet/: cbp.py  config.py  instruction.md  jax_bp.py  jax_convnet.py  jax_run.py  models.py  plot_imagenet.py  slurm_run.sh  svm.py  torch_bp.py  torch_convnet.py  torch_run.py  train_imagenet.py  visualization.py
impl_nnx/: .gitignore  agents_features.py  incremental_cifar_experiment_jax_features.py  modified_resnet_nnx_cbp_features.py  sanity_file.py  train_incremental_cifar_bdl_agent.sh  train_incremental_cifar_bdl_features.sh  train_incremental_cifar_bdl_manual_l2.sh  train_incremental_cifar_l2_er.sh
incremental_cifar/: cbp.py  config.py  instruction.md  model.py  train_dynamic_incremental_cifar.py  train_incremental_cifar.py
incremental_cifar_edited/: .gitignore  README.md  bp_train.sh  cbp.py  cbp_train.sh  compare_hessian_plots.py  config.py  dataloading_sanity_check.py  er_train.sh  l2_train.sh  l2er_train.sh  load_cifar.py  lr_sched_sanity_check.py  model.py  modified_resnet_linen.py  (+15 more)
(+280 files in other folders)
