[project]
name = "lop-jax"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.10.0",
    "distrax",
    "gymnax",
    "gymnasium",
    "typed-argument-parser",
    "torch",
    "torchvision",
    "tqdm",
    "optax",
    "numpy>=2.0",
    "matplotlib",
    "brax",
    "chex==0.1.88",
    "gym==0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "permuted_mnist",
    "incremental_cifar",
    "imagenet",
    "rlopt",
    "analysis",
]

[tool.hatch.build.targets.wheel.force-include]
"definitions.py" = "definitions.py"
